# Computer-Use

./: .gitignore  README.md  index.html  package.json  tsconfig.json  walkthrough.md
src/: App.tsx  HudWidgets.tsx  constants.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  memory.rs  models.rs  os_context.rs  recording.rs  shell.rs  shortcuts.rs  vision.rs
src/components/: ActivityLogPanel.tsx  DevTab.tsx  HealthGrid.tsx  HudWindow.tsx  MainApp.tsx  MemoryTab.tsx  ModelActivityPanel.tsx  OverlayWindow.tsx  RunTab.tsx  SavedRunsTab.tsx  SessionsTab.tsx  ShortcutsTab.tsx
src/hooks/: useAgentLoop.ts
tests/: agentRunner.test.ts
