[package]
name = "computer-use"
version = "0.1.0"
description = "Vision-first desktop automation agent"
authors = ["xiao"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
openrouter-rs = "0.5"
xcap = "0.8.2"
enigo = { version = "0.6.1", default-features = false }
dotenvy = "0.15"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
macos-accessibility-client = "0.0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSScreen"] }
